--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Welcome to Pioneer Bank</h2>
+    <div id="login-area">
+        <h1>Welcome To Pioneer Bank</h1>
+        <div class="submit-area">
+            <h4>Login</h4>
+            <input type="text" class="form-control" placeholder="Email">
+            <br>
+            <input type="password" class="form-control" placeholder="Password">
+            <br>
+            <button class="btn btn-success">Enter</button>
+        </div>
     </div>
+    
 </body>
 </html>
