--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
             <br>
             <input type="password" class="form-control" placeholder="Password">
             <br>
-            <button class="btn btn-success">Enter</button>
+            <button id="login" class="btn btn-success">Enter</button>
         </div>
     </div>
-    
+    <script>
+        const loginBtn = document.getElementById("login").addEventListener('click', function(){
+            const loginArea = document.getElementById("login-area");
+            loginArea.style.display = 'none';
+        });
+    </script>
 </body>
 </html>
